Add graduation year to MSc. Computer Science

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       <div class="flex flex-col md:flex-row items-center md:items-start md:justify-start relative" data-aos="fade-right" data-aos-once="true">
         <div class="flex-shrink-0 w-8 h-8 bg-peachy-kreme rounded-full border-2 border-brown-bonnet z-10"></div>
         <div class="mt-4 md:mt-0 md:ml-8 text-center md:text-left">
-          <h3 class="text-2xl font-semibold text-default">MSc. Computer Science</h3>
+          <h3 class="text-2xl font-semibold text-default">MSc. Computer Science (2026) </h3>
           <p class="text-lg text-default/80">University of Ghana, Legon</p>
         </div>
       </div>
