Fix duplicate semicolon in font-family declaration

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
 
     body {
-      font-family: 'Inter', sans-serif;;
+      font-family: 'Inter', sans-serif;
       scroll-behavior: smooth;
       background-color: #fffdf6;
       color: var(--french-laundry);
