--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <nav class="space-x-6 font-medium text-lg flex flex-wrap justify-center">
       <a href="#hero">Home</a>
       <a href="#contact">Contact</a>
-      <a href="Kausara Kpabia -CV.pdf">Download CV</a>
+      <a href="Software Eng-Kausara Kpabia.pdf">Download CV</a>
     </nav>
   </div>
 </header>
