Update GitHub link for schooling project

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <h3 class="font-semibold text-xl mb-2">School Management System</h3>
       <p class="mb-2">A Laravel/Filament system for all school processes with user roles and dashboards.</p>
       <p class="text-sm mb-2"><strong>Stack:</strong> PHP, Laravel, Filament, TailwindCSS, Vue.js, Livewire, PostgreSQL</p>
-      <a href="https://github.com/psychAura/join" target="_blank" class="text-peachy-kreme font-semibold">GitHub</a>
+      <a href="https://github.com/psychAura/schooling" target="_blank" class="text-peachy-kreme font-semibold">GitHub</a>
     </div>
     <div class="project-card" data-aos="fade-up" data-aos-delay="200" data-aos-once="true">
       <img src="join.jpg" alt="join" class="rounded-lg mb-4 object-cover h-40 w-full">
